# projeto_fast

./: .gitignore  README.md  pyproject.toml  sitecustomize.py
projeto_fast/: database.py  main.py  models.py  schemas.py  security.py
tests/: conftest.py  test_db.py  test_main.py  test_security.py
